dbeaver/dbeaver#14620 code style